<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home_title" />
        <item
            android:id="@+id/nav_friends"
            android:title="@string/nav_friends_title" />
        <item
            android:id="@+id/nav_messages"
            android:title="@string/nav_messages_title" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings_title" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/nav_search_title" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
